# bif

./: .gitignore  Cargo.toml  LICENSE  README.md  bif  main
bfcode/: all.bf  gpt.bf  unknown.bf
src/: main.rs
