[package]
name = "bif"
description = "The Rusty Brainfuck Compiler"
version = "0.1.0"
authors = ["Luke Leppan <lukelepp@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
