[package]
name = "bif"
description = "The Rusty Brainfuck Compiler"
version = "0.2.0"
authors = ["Luke Leppan <lukelepp@gmail.com>"]
edition = "2023"
homepage = "https://github.com/lukeleppan/bif"
repository = "https://github.com/lukeleppan/bif"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
